--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,15 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/people.js"></script>
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <script>
 	Logined(getToken());
-</script>       
+</script>
+<style>
+	#log_background{
+		background-color: #DFDCD7;
+	}
+</style>
 </head>
 <body>
 	<div id="page">
