--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,6 +3,7 @@
 <title>查詢</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/people.js"></script>
 <script>
@@ -59,18 +60,19 @@
         <div id="page">
           <div id="content">
 	          <div id="lave" class="area">
-	            <div class="item">疫苗剩餘劑量</div>
+	            <div class="item"><b>疫苗剩餘劑量</b></div>
 	            <a href="searchCounty"><div class="choiceBtn">城市總數量</div></a>
 	            <a href="searchDistrict"><div class="choiceBtn">區域總數量</div></a>
 	            <a href="searchHosp"><div class="choiceBtn">各級醫院總數量</div></a>
 	            <a href="searchDistrictDetail"><div class="choiceBtn">區域各診所數量</div></a>
 	          </div>
 	          <div id="personal" class="area">
-	            <div class="item">個人相關資料</div>
+	            <div class="item"><b>個人相關資料</b></div>
 	            <a href="searchPersonal"><div class="choiceBtn">個人資料</div></a>
 	            <a href="searchRecord"><div class="choiceBtn">疫苗卡</div></a>
 	          </div>
           </div>
+          <div class="bg"><img src="images/search.jpg" id="searchImg"></div>
         </div>
         <div id="footer">Copyright © 2022 LAI,MU-WEI. All rights reserved.</div>
 </body>
