--- a/src/main/resources/templates/searchCounty.html
+++ b/src/main/resources/templates/searchCounty.html
@@ -3,6 +3,7 @@
 <title>查詢</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/echarts.js"></script>
 <script src="js/people.js"></script>
@@ -81,9 +82,11 @@
             </div>
         </div>
         </div>
+        <div class="bg"><img src="images/search.jpg" id="searchImg"></div>
         <div id="footer">Copyright © 2022 LAI,MU-WEI. All rights reserved.</div>
     <script type="text/javascript">
     	function searchCounty(){
+    		$("#searchImg").hide();
     		var url = "api/user/searchCounty";
     		var bearer = "Bearer "+getToken();
     		let county=$('#twCounty').val();
