--- a/src/main/resources/templates/searchHosp.html
+++ b/src/main/resources/templates/searchHosp.html
@@ -3,6 +3,7 @@
 <title>查詢</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/echarts.js"></script>
 <script src="js/people.js"></script>
