--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -2,11 +2,10 @@ td, th {
     padding: 5px 10px;
 }
 table, td, th {
-    border: 1px solid #FFFFFF;
+    border: 1px solid white;
 }
 table {
     border-collapse: collapse;
     font-size:22pt;
-    background:#DFDCD7;
-    border-radius: 30px;
+    background:rgba(223, 220, 215, 0.8);
 }
