--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/menu.css">
 		<link rel="stylesheet" href="css/zip.css">
 		<link rel="stylesheet" href="css/table.css">
+		<link rel="shortcut icon" href="images/favicon.ico"/>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="js/people.js"></script>
 		<script src="js/table.js"></script>
@@ -15,6 +16,7 @@
 		    #log_background{
 		    	height:666px;
 		    	top: calc(calc(100% - 666px)/2);
+		    	background: rgba(255, 255, 255, 0.8);
 		    }
 		    #zip{
 				margin:7 0 14 40;
@@ -59,6 +61,10 @@
 			}
 			.checkBtn{
 				top: -20pt !important;
+			}
+			#registerImg{
+				display: block;
+				opacity: 0.6;
 			}
 		</style>
 	</head>
@@ -169,6 +175,7 @@
 				<div id="btn_box" class="checkBtn"><a href="javascript:void(0)" onclick=send_register()>確認</a></div>
 			</div>
 		</div>
+		<div class="bg"><img src="images/register.jpg" id="registerImg"></div>
 		<div id="footer">Copyright © 2022 LAI,MU-WEI. All rights reserved.</div>
 	</body>
 	<script src="js/register.js"></script>
