--- a/src/main/resources/templates/searchDistrictDetail.html
+++ b/src/main/resources/templates/searchDistrictDetail.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="css/menu.css">
 <link rel="stylesheet" href="css/zip.css">
 <link rel="stylesheet" href="css/table.css">
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/echarts.js"></script>
 <script src="js/people.js"></script>
@@ -108,6 +109,7 @@
   				</tbody>
 			</table>  
         </div>
+        <div class="bg"><img src="images/search.jpg" id="searchImg"></div>
         <div id="footer">Copyright © 2022 LAI,MU-WEI. All rights reserved.</div>
     <script type="text/javascript">
 	    var saints = {
