--- a/src/main/resources/templates/searchPersonal.html
+++ b/src/main/resources/templates/searchPersonal.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
 <link rel="stylesheet" href="css/table.css">
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/echarts.js"></script>
 <script src="js/people.js"></script>
@@ -48,7 +49,7 @@ table {
 		</div>
 	</header>
 	<div id="page">
-		<div id="table">
+		<div id="table" border="0">
 			<table id="data">
 				<thead>
 					<tr>
@@ -63,6 +64,7 @@ table {
 			</div>
 		</div>
 	</div>
+	<div class="bg"><img src="images/search.jpg" id="searchImg"></div>
 	<div id="footer">Copyright © 2022 LAI,MU-WEI. All rights
 		reserved.</div>
 	<script type="text/javascript">
