--- a/src/main/resources/templates/searchPersonal.html
+++ b/src/main/resources/templates/searchPersonal.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>查詢</title>
+<title>疫苗預約平台</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
 <link rel="stylesheet" href="css/table.css">
@@ -89,7 +89,7 @@ table {
    				request.setRequestHeader("Authorization", bearer);
    			},
    			success: function(respone) {
-				add(respone, saints);
+    			add(respone, saints);
             },
    			error: function(){
    				alert("閒置過久，系統已自動登出，請重新登入");
