--- a/src/main/resources/templates/simulation.html
+++ b/src/main/resources/templates/simulation.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>模擬資料產生</title>
+<title>疫苗預約平台</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet"
 	href="https://code.jquery.com/ui/1.13.1/themes/smoothness/jquery-ui.min.css">
@@ -10,6 +10,7 @@
 <link rel="shortcut icon" href="images/favicon.ico"/>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+<script src="js/people.js"></script>
 <style>
 .slider {
 	border-radius: 999em;
