--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -77,7 +77,8 @@
 	              <ul class="main-menu">
 	                <li id="firstLi"><a href="choice">首頁</a></li>
 	                <li><a href="search">查詢</a></li>
-	                <li><a href="#">注意事項</a></li>
+	                <li><a href="informationSheet">接種須知</a></li>
+					<li><a href="simulation">模擬資料</a></li>
 	                <li><a href="javascript:void(0)" onclick=logout()>登出</a></li>
 	              </ul>
 	            </nav>
