--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>查詢</title>
+<title>疫苗預約平台</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
 <link rel="shortcut icon" href="images/favicon.ico"/>
