--- a/src/main/resources/templates/searchRecord.html
+++ b/src/main/resources/templates/searchRecord.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>查詢</title>
+<title>疫苗預約平台</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/menu.css">
 <link rel="stylesheet" href="css/table.css">
@@ -23,6 +23,9 @@
 table {
 	margin-left: calc(calc(100% - 1040px)/2);
 	width: 1040px;
+}
+.other{
+	background:rgba(236, 238, 206, 0.6);
 }
 </style>
 </head>
@@ -116,8 +119,15 @@ table {
                 cellValue.innerHTML=respone[0][i];
             }
             for(var i=0; i<respone.length; i++){
+            	console.log(i);
                 for(var j=2; j<respone[0].length; j++){
                     let newRow=table.insertRow();
+                    if(i!=0&&i%2==1) {
+            			newRow.className="other";
+            		}
+                    if(i%2==0) {
+                    	newRow.className="dark";
+                    }
                     let cellTitle=newRow.insertCell();
                     let cellValue=newRow.insertCell();
                     cellTitle.innerHTML=saints[j];
