--- a/src/main/resources/templates/searchDistrictDetail.html
+++ b/src/main/resources/templates/searchDistrictDetail.html
@@ -20,7 +20,7 @@
     	height:202pt;
     }
 	table {
-	    margin-left: calc(50% - 822px);
+	    margin-left: calc(calc(100% - 1080px)/2);
 	}
 	#data{
 		display:none;
@@ -101,8 +101,8 @@
 				<thead>
 					<tr>
 	    				<th width="600px">醫療院所名稱</th>
-					    <th width="700px">地址</th>
-					    <th width="300px">剩餘劑量</th>
+					    <th width="300px">電話號碼</th>
+					    <th width="130px">剩餘劑量</th>
 				 	</tr>
 				</thead>
 				<tbody>
