--- a/src/main/resources/templates/informationSheet.html
+++ b/src/main/resources/templates/informationSheet.html
@@ -71,10 +71,11 @@
 	left:1px;
 }
 .col p{
-	border:3px solid #68A7AD;
-	background: #99C4C8;
+	border:3px solid black;
+	background-color: rgba(0, 0, 0, 0.6);
 	border-radius: 9px;
 	line-height: 60px;
+	color: white;
 }
 </style>
 </head>
